--- a/subscriber.html
+++ b/subscriber.html
@@ -104,7 +104,7 @@
 			<div class="hotel-wrapper">
 				<div class="hotel-text">
 					<div class="hotel-text__wrap">
-						<h1 class="hotel-text__title hotel-name">Thank you, your message has been sent!</h1>
+						<h1 class="hotel-text__title hotel-name">Thank you, your Email has been sent!</h1>
 					</div>
 					<!-- /.hotel-text__wrap -->
 					<p class="hotel-text__desc"> Our manager will contact you!
