--- a/thankyou.html
+++ b/thankyou.html
@@ -18,7 +18,8 @@
 		<div class="navbar-top">
 			<div class="container">
 				<div class="navbar-top__content">
-					<a class="logo" href="index.html" data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1000">
+					<a class="logo" href="https://elizaveta-oleynik.ru/best-tour-plan/" data-aos="zoom-in-up" data-aos-delay="100"
+						data-aos-duration="1000">
 						<img class="logo__img" loading="lazy" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
@@ -120,8 +121,8 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-wrapper">
-				<a href="index.html" class="footer__logo"><img class="logo footer__logo-img" loading="lazy"
-						src="img/logo-vertical.svg" alt="logo: best tour plan"></a>
+				<a href="https://elizaveta-oleynik.ru/best-tour-plan/" class="footer__logo"><img class="logo footer__logo-img"
+						loading="lazy" src="img/logo-vertical.svg" alt="logo: best tour plan"></a>
 
 				<div class="footer__list footer__categories">
 					<h3 class="footer__title">All categories</h3>
